--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,7 @@
 RewriteEngine On
 
-# Omleiding voor 'somsdavidyoutube' naar de YouTube-pagina
+# Omleiding voor '/somsdavidyoutube' naar de YouTube-pagina
 RewriteRule ^somsdavidyoutube$ https://www.youtube.com/@SomsDavid/ [R=301,L]
+
+# Omleiding voor '/discord' naar de Discord-uitnodiging
+RewriteRule ^discord$ https://discord.gg/gwpPBp28sY [R=301,L]
